[package]
name = "river"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
log = "0.4"
env_logger = "0.10"
tempfile = "3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming"
]