[package]
name = "river"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.153"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.20"
env_logger = "0.10.2"
tempfile = "3.10.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.53.0"
features = [
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_WindowsProgramming"
]